bg overflow fix

--- a/Hogwarts/enterHogwarts.css
+++ b/Hogwarts/enterHogwarts.css
@@ -7,7 +7,16 @@ html {
     overflow: hidden;
     background: radial-gradient(ellipse at bottom, #1b2735 0%,#090a0f 100%);
 }
-
+body{
+    overflow-x: hidden;
+    overflow-y: hidden;
+}
+@media only screen and (max-width: 600px) {
+    body{
+        overflow-y: visible;
+    }
+    
+}
 #titleXO {
     position:absolute;
     top: 50%;
